# lap-two

lib/: petrinets.ml  petrinets.mli
test/: dune  test_petrinets_task1.ml  test_petrinets_task2.ml  unit_tests.ml
