(test
 (name test_petrinets_task1)
 (libraries ounit2 mylib)
 (modules unit_tests test_petrinets_task1))

(test
 (name test_petrinets_task2)
 (libraries ounit2 mylib)
 (modules buildfire coffeemachine test_petrinets_task2))

(rule
 (alias test_project_2)
 (deps test_petrinets_task1.exe)
 (action
  (run ./test_petrinets_task1.exe)))

(rule
 (alias test_project_3)
 (deps test_petrinets_task2.exe)
 (action
  (run ./test_petrinets_task2.exe)))
